--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,7 @@
 {
-  "version": "1.0.2",
   "tasks": {
-    "dev": "deno run --watch --allow-net --allow-read='shared' --allow-write='shared' src/main.ts",
-    "start": "deno run --allow-net --allow-read='shared' --allow-write='shared' src/main.ts",
+    "dev": "deno run --watch --allow-net --allow-read --env --allow-env='SHARED_PATH' src/main.ts",
+    "start": "deno run --allow-net --allow-read --env --allow-env='SHARED_PATH' src/main.ts",
     "check": "deno cache --reload --lock-write --check src/main.ts"
   },
   "fmt": {
